[BASE-82] #resolve