@@ -20,6 +20,7 @@
  * "Portions Copyrighted [year] [name of copyright owner]"
  * ====================
  * Portions Copyrighted 2010-2013 ForgeRock AS.
+ * Portions Copyrighted 2022 ConnId
  */
 
 package org.identityconnectors.framework.server;
@@ -101,7 +102,7 @@ public abstract class ConnectorServer {
     public static ConnectorServer newInstance() {
         try {
             final Class<?> clazz = Class.forName(IMPL_NAME);
-            return (ConnectorServer) clazz.newInstance();
+            return (ConnectorServer) clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw ConnectorException.wrap(e);
         }
