@@ -67,7 +67,8 @@ public abstract class ScriptExecutorFactory {
                 try {
                     Class<?> clazz = Class.forName(factory);
                     // Create an instance in order to get the supported language.
-                    ScriptExecutorFactory instance = (ScriptExecutorFactory) clazz.newInstance();
+                    ScriptExecutorFactory instance = 
+                            (ScriptExecutorFactory) clazz.getDeclaredConstructor().newInstance();
                     String language = instance.getLanguageName();
                     // Do not override a factory earlier in the classpath.
                     if (!factoryCache.containsKey(language)) {
@@ -153,7 +154,7 @@ public abstract class ScriptExecutorFactory {
         }
         // exceptions here should not happened because of the register
         try {
-            return (ScriptExecutorFactory) clazz.newInstance();
+            return (ScriptExecutorFactory) clazz.getDeclaredConstructor().newInstance();
         } catch (RuntimeException e) {
             throw e;
         } catch (Exception e) {
