@@ -19,6 +19,7 @@
  * enclosed by brackets [] replaced by your own identifying information:
  * "Portions Copyrighted [year] [name of copyright owner]"
  * ====================
+ * Portions Copyrighted 2022 ConnId
  */
 package org.identityconnectors.common.security;
 
@@ -37,7 +38,7 @@ public abstract class EncryptorFactory {
         if (instance == null) {
             try {
                 Class<?> clazz = Class.forName(IMPL_NAME);
-                Object object = clazz.newInstance();
+                Object object = clazz.getDeclaredConstructor().newInstance();
                 instance = EncryptorFactory.class.cast(object);
             } catch (RuntimeException e) {
                 throw e;
