@@ -19,6 +19,7 @@
  * enclosed by brackets [] replaced by your own identifying information:
  * "Portions Copyrighted [year] [name of copyright owner]"
  * ====================
+ * Portions Copyrighted 2022 ConnId
  */
 package org.identityconnectors.framework.api;
 
@@ -47,7 +48,7 @@ public abstract class ConnectorInfoManagerFactory {
         if (instance == null) {
             try {
                 Class<?> clazz = Class.forName(IMPL_NAME);
-                Object object = clazz.newInstance();
+                Object object = clazz.getDeclaredConstructor().newInstance();
                 instance = ConnectorInfoManagerFactory.class.cast(object);
             } catch (Exception e) {
                 throw ConnectorException.wrap(e);
