@@ -19,6 +19,7 @@
  * enclosed by brackets [] replaced by your own identifying information:
  * "Portions Copyrighted [year] [name of copyright owner]"
  * ====================
+ * Portions Copyrighted 2022 ConnId
  */
 package org.identityconnectors.framework.common.serializer;
 
@@ -51,7 +52,7 @@ public abstract class ObjectSerializerFactory {
             if (instance == null) {
                 try {
                     final Class<?> clazz = Class.forName(IMPL_NAME);
-                    final Object object = clazz.newInstance();
+                    final Object object = clazz.getDeclaredConstructor().newInstance();
                     instance = ObjectSerializerFactory.class.cast(object);
                 } catch (Exception e) {
                     throw ConnectorException.wrap(e);
